--- a/index.html
+++ b/index.html
@@ -5,7 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle de Produção de OP</title>
     <style>
-        /* Seu código CSS permanece inalterado */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        .input-group {
+            margin-bottom: 10px;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        input[type="number"],
+        input[type="text"],
+        select {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+        }
+        button {
+            padding: 10px 20px;
+            color: white;
+            border: none;
+            cursor: pointer;
+            margin-right: 5px;
+            margin-top: 10px;
+        }
+        .machine-btn {
+            width: 150px;
+            height: 50px;
+            margin-bottom: 10px;
+            font-size: 16px;
+        }
+        .machine-buttons {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+        .active {
+            background-color: red;
+        }
+        .inactive {
+            background-color: green;
+        }
+        .calc-btn {
+            background-color: #4CAF50;
+        }
+        .calc-btn:hover {
+            background-color: #45a049;
+        }
+        .result {
+            margin-top: 20px;
+            font-weight: bold;
+        }
+        table {
+            margin-top: 20px;
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        h2 {
+            margin-top: 30px;
+        }
     </style>
 </head>
 <body>
