--- a/index.html
+++ b/index.html
@@ -59,21 +59,18 @@
             background-color: #45a049;
         }
         .save-btn {
-            background-color: #2196F3;
+            background-color: #008CBA;
         }
         .save-btn:hover {
-            background-color: #0b7dda;
-        }
-        .results-container {
-            margin-top: 20px;
-            padding: 15px;
-            border: 1px solid #ddd;
-            background-color: #f9f9f9;
-            border-radius: 8px;
+            background-color: #007B9E;
         }
         .result {
-            margin-bottom: 10px;
+            margin-top: 20px;
             font-weight: bold;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background-color: #f9f9f9;
         }
         table {
             margin-top: 20px;
@@ -136,18 +133,18 @@
             <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
             <input type="number" id="piecesRemoved" min="0" required>
         </div>
-        <button type="button" class="calc-btn" onclick="calculateResults()">Calcular</button>
+        <button type="button" class="calc-btn" onclick="calculateAndSave()">Calcular</button>
         <button type="button" class="save-btn" onclick="saveRecord()">Salvar</button>
     </form>
 
-    <div class="results-container">
-        <h2>Resultados:</h2>
-        <p id="cutsResult" class="result">Número de Cortes: </p>
-        <p id="turnsResult" class="result">Número de Voltas: </p>
-        <p id="cutAmountResult" class="result">Quantidade Cortada: </p>
-        <p id="totalCutAmountResult" class="result">Quantidade Total Cortada: </p>
-        <p id="cyclesResult" class="result">Número de Ciclos: </p>
-        <p id="remainingTurnsResult" class="result">Restante de Voltas para Fechar a OP: </p>
+    <h2>Resultados:</h2>
+    <div class="result">
+        <p id="cutsResult">Número de Cortes: </p>
+        <p id="turnsResult">Número de Voltas: </p>
+        <p id="cutAmountResult">Quantidade Cortada: </p>
+        <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
+        <p id="cyclesResult">Número de Ciclos: </p>
+        <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
     </div>
 
     <table id="recordsTable">
@@ -202,7 +199,7 @@
             input.value = value;
         }
 
-        function calculateResults() {
+        function calculateAndSave() {
             const opNumber = document.getElementById('opNumber').value;
             const componentCode = document.getElementById('componentCode').value;
             const opQuantity = parseFloat(document.getElementById('opQuantity').value);
@@ -236,19 +233,19 @@
             document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
 
             // Cálculo da Quantidade Cortada
-            const cutAmount = numCuts * opLength;
-            document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount} cm`;
+            const cutAmount = Math.floor(numCuts * numTurns); // Arredondando para menor
+            document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
 
             // Cálculo da Quantidade Total Cortada
-            const totalCutAmount = cutAmount * numTurns;
-            document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount} cm`;
+            const totalCutAmount = cutAmount - piecesRemoved;
+            document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
 
             // Cálculo do Número de Ciclos
-            const numCycles = opQuantity / piecesRemoved;
-            const fractionalPart = numCycles - Math.floor(numCycles);
-            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${Math.floor(numCycles)}`;
+            const numCycles = Math.floor(totalCutAmount / opQuantity);
+            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
 
-            // Cálculo da Parte Fracionária do Número de Voltas
+            // Parte fracionária do número de ciclos
+            const fractionalPart = totalCutAmount / opQuantity - numCycles;
             const remainingTurns = Math.floor(numTurns * fractionalPart);
             document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
         }
